Move org.eclipse.text.tests to Java 21
Bundle is in the report as changed content without version bump
(https://download.eclipse.org/eclipse/downloads/drops4/I20260603-1800/buildlogs/reporeports/reports/versionChecks.html
) .
I am using the opportunity to move it to Java 21, fix new deprecations
and modernize JUnit usage in the edited files.